tests/negative/test_fnc_redef_variad.orb
fnc foo (x:i32) ();
fnc foo (y:i64)::variadic ();

fnc main () () {};